Upgrading to vertx 4.2.3 and adding QuarkusApp back.
